--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#032b32" />
     <link href="/dist/output.css" rel="stylesheet">
-    <meta
-      name="Keelan Vella"
-      content="Keelan Vella is a full stack web developer based in Malta."
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Keelan Vella</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Keelan Vella",
+        "alternateName": ["Keelan Vella Zerafa", "El Hassu", "ElHassu", "elhassu", "Keelan"],
+        "url": "https://www.elhassu.com/"
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
