Add meta tags for Open Graph and Twitter cards

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,37 @@
         "url": "https://www.elhassu.com/"
       }
     </script>
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
+    <meta
+      property="og:url"
+      content="https://www.elhassu.com/"
+    />
+    <meta
+      property="og:title"
+      content="Keelan Vella"
+    />
+    <meta
+      property="og:description"
+      content="Keelan Vella, an Entrepreneur and a Full Stack Developer with a relentless passion for software development."
+    />
+    <meta
+      name="twitter:card"
+      content="summary_large_image"
+    />
+    <meta
+      name="twitter:site"
+      content="@Keelan_El_Hassu"
+    />
+    <meta
+      name="twitter:title"
+      content="Keelan Vella"
+    />
+    <meta
+      name="twitter:description"
+      content="Keelan Vella, an Entrepreneur and a Full Stack Developer with a relentless passion for software development."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
