--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#032b32" />
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="/dist/output.css" rel="stylesheet"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script type="application/ld+json">
@@ -17,8 +17,13 @@
         "url": "https://www.elhassu.com/"
       }
     </script>
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
+
+    <meta property="og:type" content="website"/>
+
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png"/>
+    <meta property="og:image:width" content="192"/>
+    <meta property="og:image:height" content="192"/>
+
     <meta
       property="og:url"
       content="https://www.elhassu.com/"
@@ -31,6 +36,7 @@
       property="og:description"
       content="Keelan Vella, an Entrepreneur and a Full Stack Developer with a relentless passion for software development."
     />
+
     <meta
       name="twitter:card"
       content="summary_large_image"
